[gd_scene load_steps=13 format=3 uid="uid://b4ap1nw2c0xcf"]

[ext_resource type="Script" uid="uid://17rvcacxf4mf" path="res://Scenes/chapter_options.gd" id="1_8so70"]
[ext_resource type="Texture2D" uid="uid://cui7jmyabxr2f" path="res://Menu Backgrounds/optionsBG.png" id="1_k1e4b"]
[ext_resource type="FontFile" uid="uid://dfe5ixv61d87y" path="res://Fonts/Spring Leaves.ttf" id="2_tlci5"]
[ext_resource type="VideoStream" path="res://assets/video.ogv" id="5_7fv5d"]
[ext_resource type="Texture2D" uid="uid://dkkqlywuaohi0" path="res://assets/lock.png" id="6_8so70"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8f2j0"]
texture = ExtResource("1_k1e4b")
modulate_color = Color(0.57700837, 0.5770084, 0.57700837, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yma5j"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.03137255, 0.015686275, 0, 1)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5ta7"]
bg_color = Color(0.45840502, 0.45840508, 0.45840502, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk6hh"]
bg_color = Color(0.74558026, 0.7455802, 0.7455802, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0udu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_alser"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k73da"]
texture = ExtResource("6_8so70")

[node name="Chapter options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8so70")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 41.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8f2j0")

[node name="Chapter1" type="Button" parent="."]
z_index = 10
layout_mode = 0
offset_left = 370.0
offset_top = 441.0
offset_right = 736.0
offset_bottom = 816.58954
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tlci5")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_yma5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s5ta7")
theme_override_styles/hover = SubResource("StyleBoxFlat_hk6hh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0udu1")
text = "1"

[node name="Chapter2" type="Button" parent="."]
layout_mode = 0
offset_left = 777.0
offset_top = 443.0
offset_right = 1143.0
offset_bottom = 810.5641
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tlci5")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_yma5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s5ta7")
theme_override_styles/hover = SubResource("StyleBoxFlat_hk6hh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0udu1")
text = "2"

[node name="Chapter3" type="Button" parent="."]
layout_mode = 0
offset_left = 1179.0
offset_top = 448.0
offset_right = 1538.0
offset_bottom = 808.5342
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tlci5")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_yma5j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s5ta7")
theme_override_styles/hover = SubResource("StyleBoxFlat_hk6hh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0udu1")
text = "3"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 301.0
offset_top = 54.0
offset_right = 1655.0
offset_bottom = 353.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("2_tlci5")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxEmpty_alser")
text = "Select A Chapter"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 1030.0
offset_top = 723.0
offset_right = 1112.0
offset_bottom = 796.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k73da")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 1408.0
offset_top = 712.0
offset_right = 1490.0
offset_bottom = 785.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k73da")

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 1920.0
offset_bottom = 1078.0
mouse_filter = 2
stream = ExtResource("5_7fv5d")

[connection signal="pressed" from="Chapter1" to="." method="_on_chapter_1_pressed"]
[connection signal="pressed" from="Chapter2" to="Chapter2" method="_on_pressed"]
[connection signal="pressed" from="Chapter3" to="Chapter3" method="_on_pressed"]
